# mcp-poc

./: .gitignore  README.md  prompts.py  pyproject.toml
server/: .gitignore  client.py  client_fastmcp_cloud.py  client_fastmcp_with_llm.py  client_prod.py  client_remote_mcp.py  config_client.json  expense.db  expense_tracker.py  google_sheet.py  mcpconfig.json  rag.py  weather.py
